refactor: replace collect(Collectors.toList()) with toList()
Keep Collectors.toCollection(ArrayList::new) in places where the
resulting list is mutated afterwards, since Stream.toList() returns an
unmodifiable list. Add explicit type arguments in a few places where
the Eclipse compiler infers stricter types than javac for toList().

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>