@@ -16,7 +16,6 @@
 package com.vaadin.flow.component.combobox.test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.vaadin.flow.component.checkbox.Checkbox;
@@ -30,7 +29,7 @@ public class MultiSelectComboBoxKeepFilterPage extends Div {
         MultiSelectComboBox<String> comboBox = new MultiSelectComboBox<>(
                 "Items");
         List<String> items = IntStream.range(0, 100)
-                .mapToObj(i -> "Item " + (i + 1)).collect(Collectors.toList());
+                .mapToObj(i -> "Item " + (i + 1)).toList();
         comboBox.setItems(items);
 
         Checkbox keepFilter = new Checkbox("Keep filter");
