@@ -16,7 +16,6 @@
 package com.vaadin.flow.component.datepicker;
 
 import java.util.Locale;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.vaadin.flow.component.grid.Grid;
@@ -35,8 +34,8 @@ public class DatePickerInAGridHeaderPage extends Div {
         header.setId("date-picker");
 
         grid.addColumn(ValueProvider.identity()).setHeader(header);
-        grid.setItems(IntStream.range(0, 100).mapToObj(i -> "Item " + i)
-                .collect(Collectors.toList()));
+        grid.setItems(
+                IntStream.range(0, 100).mapToObj(i -> "Item " + i).toList());
 
         add(grid);
     }
