@@ -15,7 +15,6 @@
  */
 package com.vaadin.flow.component.grid.it;
 
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.vaadin.flow.component.button.Button;
@@ -66,8 +65,8 @@ public class GridSingleSelectionDeselectAllowedPage extends VerticalLayout {
         Grid<String> grid = new Grid<>();
         grid.addColumn(string -> String.valueOf(Math.random())) // NOSONAR
                 .setHeader("column 1");
-        grid.setItems(IntStream.rangeClosed(1, 3).mapToObj(String::valueOf)
-                .collect(Collectors.toList()));
+        grid.setItems(
+                IntStream.rangeClosed(1, 3).mapToObj(String::valueOf).toList());
         grid.setAllRowsVisible(true);
         if (!deselectAllowed) {
             ((GridSingleSelectionModel) grid.getSelectionModel())
@@ -81,8 +80,8 @@ public class GridSingleSelectionDeselectAllowedPage extends VerticalLayout {
     private Grid<String> setItemsGrid(Grid grid, String id) {
         grid.addColumn(string -> String.valueOf(Math.random())) // NOSONAR
                 .setHeader("column 1");
-        grid.setItems(IntStream.rangeClosed(1, 3).mapToObj(String::valueOf)
-                .collect(Collectors.toList()));
+        grid.setItems(
+                IntStream.rangeClosed(1, 3).mapToObj(String::valueOf).toList());
         grid.setAllRowsVisible(true);
         grid.setId(id);
         return grid;
