@@ -16,7 +16,6 @@
 package com.vaadin.flow.component.grid.it;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.html.Div;
@@ -56,7 +55,7 @@ public class LegacyTestView extends Div {
     }
 
     protected List<Person> getItems() {
-        return items.stream().map(Person::clone).collect(Collectors.toList());
+        return items.stream().map(Person::clone).toList();
     }
 
     protected List<PersonWithLevel> getRootItems() {
